// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should find all the types of Components 1`] = `
<div>
  <ClassComponent>
    <div
      data-a8f769be={true}
    />
  </ClassComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 2`] = `
<div>
  <ArrowFunctionalComponent>
    <div
      data-f49764c6={true}
    />
  </ArrowFunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 3`] = `
<div>
  <FunctionalComponent>
    <p
      data-b5d7faff={true}
    />
  </FunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 4`] = `
<div>
  <ComposedComponent>
    <Button
      data-8e388bfc={true}
    >
      <button
        data-8e388bfc={true}
      />
    </Button>
  </ComposedComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 5`] = `
<div>
  <ComponentWithAttrs>
    <div
      data-889909b2={true}
      data-test="testme"
    />
  </ComponentWithAttrs>
</div>
`;

exports[`babel plugin should find all the types of Components 6`] = `
<div>
  <DefaultClass>
    <div
      data-51b7b868={true}
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find all the types of Components 7`] = `
<div>
  <DefaultClass>
    <div
      data-7d3c8cda={true}
    />
  </DefaultClass>
</div>
`;

exports[`babel plugin should find nested Component 1`] = `
<ClassComponent>
  <div
    data-a8f769be={true}
  >
    <ArrowFunctionalComponent>
      <div
        data-f49764c6={true}
      >
        <FunctionalComponent>
          <p
            data-b5d7faff={true}
          >
            <ComposedComponent>
              <Button
                data-8e388bfc={true}
              >
                <button
                  data-8e388bfc={true}
                />
              </Button>
            </ComposedComponent>
          </p>
        </FunctionalComponent>
      </div>
    </ArrowFunctionalComponent>
  </div>
</ClassComponent>
`;

exports[`babel plugin should save Component\`s root attrs 1`] = `
<ComponentWithAttrs>
  <div
    data-889909b2={true}
    data-test="testme"
  />
</ComponentWithAttrs>
`;

exports[`babel plugin should save Component\`s root attrs 2`] = `
DOMStringMap {
  "889909b2": "true",
  "test": "testme",
}
`;

exports[`babel plugin should skip React.Fragment 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.B = exports.A = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

const A = () => _react.default.createElement(_react.default.Fragment, null, _react.default.createElement(\\"div\\", null));

exports.A = A;

const B = () => _react.default.createElement(_react.Fragment, null, _react.default.createElement(\\"div\\", null));

exports.B = B;"
`;

exports[`babel plugin transform should transform conditionals functions 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.ifRender = exports.conditionalRender = exports.ternaryRender = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable-next-line no-unused-vars */
const ternaryRender = ({
  children,
  flag
}) => flag ? _react.default.createElement(\\"div\\", {
  \\"data-96c8a304\\": true
}, children) : _react.default.createElement(\\"a\\", {
  \\"data-96c8a304\\": true
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.ternaryRender = ternaryRender;
ternaryRender.testId = \\"96c8a304\\";

const conditionalRender = ({
  children,
  flag
}) => flag && _react.default.createElement(\\"div\\", {
  \\"data-e8ffac7d\\": true
}, children);
/* eslint-disable-next-line no-unused-vars */


exports.conditionalRender = conditionalRender;
conditionalRender.testId = \\"e8ffac7d\\";

const ifRender = ({
  children,
  flag
}) => {
  if (flag) {
    return _react.default.createElement(\\"div\\", {
      \\"data-633adcac\\": true
    }, children);
  }

  return null;
};

exports.ifRender = ifRender;
ifRender.testId = \\"633adcac\\";"
`;

exports[`babel plugin transform should transform declared named class in default 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-7d3c8cda\\": true
    }, this.props.children);
  }

}

DefaultClass.testId = \\"7d3c8cda\\";
var _default = DefaultClass;
exports.default = _default;"
`;

exports[`babel plugin transform should transform default anonymous function 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = _default;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _default({
  children
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-65353e34\\": true
  }, children);
}

if (module.exports) {
  module.exports.default.testId = \\"65353e34\\";
}"
`;

exports[`babel plugin transform should transform default named class 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } else { var newObj = {}; if (obj != null) { for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = Object.defineProperty && Object.getOwnPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : {}; if (desc.get || desc.set) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } } newObj.default = obj; return newObj; } }

// eslint-disable-next-line
class DefaultClass extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-51b7b868\\": true
    }, this.props.children);
  }

}

exports.default = DefaultClass;

if (module.exports) {
  module.exports.default.testId = \\"51b7b868\\";
}"
`;

exports[`babel plugin transform should transform default named function 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = NamedFunc;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function NamedFunc({
  children
}) {
  return _react.default.createElement(\\"div\\", {
    \\"data-e7f23ea4\\": true
  }, children);
}

if (module.exports) {
  module.exports.default.testId = \\"e7f23ea4\\";
}"
`;

exports[`babel plugin transform should transform source code depends on the env option 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-c7b7156f': true} : {}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testId = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-a8f769be': true} : {}, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testId = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-f49764c6': true} : {}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testId = \\"f49764c6\\";

function FunctionalComponent({
  children
}) {
  return _react.default.createElement(\\"p\\", process.env.RESELECTOR === \\"true\\" ? {'data-b5d7faff': true} : {}, children);
}

FunctionalComponent.testId = \\"b5d7faff\\";

const ComposedComponent = ({
  children
}) => _react.default.createElement(Button, process.env.RESELECTOR === \\"true\\" ? {'data-8e388bfc': true} : {}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testId = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children
}) => _react.default.createElement(\\"div\\", _extends({
  \\"data-test\\": \\"testme\\"
}, process.env.RESELECTOR === \\"true\\" ? {'data-889909b2': true} : {}), children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testId = \\"889909b2\\";

var _default = ({
  children
}) => _react.default.createElement(\\"div\\", process.env.RESELECTOR === \\"true\\" ? {'data-5f9b51d4': true} : {}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testId = \\"5f9b51d4\\";
}"
`;

exports[`babel plugin transform should transform source code well for development 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable react/prefer-stateless-function */
const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-c7b7156f\\": true
}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testId = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-a8f769be\\": true
    }, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testId = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-f49764c6\\": true
}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testId = \\"f49764c6\\";

function FunctionalComponent({
  children
}) {
  return _react.default.createElement(\\"p\\", {
    \\"data-b5d7faff\\": true
  }, children);
}

FunctionalComponent.testId = \\"b5d7faff\\";

const ComposedComponent = ({
  children
}) => _react.default.createElement(Button, {
  \\"data-8e388bfc\\": true
}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testId = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  \\"data-889909b2\\": true
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testId = \\"889909b2\\";

var _default = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-5f9b51d4\\": true
}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testId = \\"5f9b51d4\\";
}"
`;
